# madrun

./: CMakeLists.txt  README.md
include/: window.hpp
src/: main.cpp  window.cpp
